--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Aula HTML</title>
 </head>
 <body>
-    Olá mundo!
+    <h1>Minha tag</h1>
+    <h2>Minha tag</h2>
+    <h3>Minha tag</h3>
+    <h4>Minha tag</h4>
+    <h5>Minha tag</h5>
+    <h6>Minha tag</h6>
+    <hr />
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque repellat blanditiis ullam debitis iste est ut pariatur delectus consequuntur mollitia voluptatum, dicta distinctio sequi dolorem. Aliquid cupiditate sequi perspiciatis dolorum.</p>
+    <a href="https://www.youtube.com/watch?v=zkjdNeGQEAY" title="Clique Aqui">Clique aqui</a>
+    <a href="tel:71996081645"> Dial In </a>
+
 </body>
 </html>
