Updated contents of index.html, containers.html and changelog.md

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque repellat blanditiis ullam debitis iste est ut pariatur delectus consequuntur mollitia voluptatum, dicta distinctio sequi dolorem. Aliquid cupiditate sequi perspiciatis dolorum.</p>
     <a href="https://www.youtube.com/watch?v=zkjdNeGQEAY" title="Clique Aqui">Clique aqui</a>
     <a href="tel:71996081645"> Dial In </a>
+    <hr />
+    <a href="./containers.html">Ir para a página de containers</a>
 
 </body>
 </html>
