--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <hr />
     <a href="./containers.html">Ir para a página de containers</a>
     <a href="./listas.html">Ir para a página de listas</a>
+    <a href="./tabelas.html">Ir para a página de tabelas</a>
 </body>
 </html>
