--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     <a href="./listas.html">Ir para a página de listas</a>
     <a href="./tabelas.html">Ir para a página de tabelas</a>
     <a href="/forms.html">Ir para a página de formulários</a>
+    <br />
+    <a href="login.html">Fazer login</a>
 </body>
 </html>
