midia.html was created and media was added to it
Finally adding some different things

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <a href="/forms.html">Ir para a página de formulários</a>
     <br />
     <a href="login.html">Fazer login</a>
+    <br />
+    <a href="midia.html">Ir para página de midias</a>
 </body>
 </html>
