--- a/Atividade modulo 3/index.html
+++ b/Atividade modulo 3/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício módulo 3</title>
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
     <h1>Formulário de cadastro</h1>
@@ -17,7 +18,7 @@
         <label for="password">Senha</label>
         <input type="password" name="password" id="password" placeholder="Digite sua senha" />
         <br />
-        <button type="submit">Cadastrar</button> 
+        <button class="botao" type="submit">Cadastrar</button> 
     </form>
 </body>
 </html>
