--- a/Atividade modulo 3/index.html
+++ b/Atividade modulo 3/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício módulo 3</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
     <h1>Formulário de cadastro</h1>
@@ -20,5 +19,6 @@
         <br />
         <button class="botao" type="submit">Cadastrar</button> 
     </form>
+    <a href="./noticias.html">Ir para portal de notícias</a>
 </body>
 </html>
